--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "generator-bones",
-  "version": "0.0.4",
-  "description": "Yeoman generator for scaffolding out a basic web project.",
-  "keywords": [
-    "yeoman-generator",
-    "bones",
-    "skin",
-    "theme",
-    "front-end"
-  ],
-  "homepage": "https://github.com/matt-bailey/generator-bones",
-  "bugs": "https://github.com/matt-bailey/generator-bones/issues",
-  "author": {
-    "name": "Matt Bailey",
-    "email": "me@mattbailey.co",
-    "url": "https://github.com/matt-bailey"
-  },
-  "main": "app/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/matt-bailey/generator-bones.git"
-  },
-  "dependencies": {
-    "yeoman-generator": "~0.13.4"
-  },
-  "engines": {
-    "node": ">=0.8.0"
-  },
-  "licenses": [
-    {
-      "type": "MIT"
-    }
-  ]
+	"name": "generator-bones",
+	"version": "0.0.4",
+	"description": "Yeoman generator for scaffolding out a basic web project.",
+	"keywords": [
+		"yeoman-generator",
+		"bones",
+		"skin",
+		"theme",
+		"front-end"
+	],
+	"homepage": "https://github.com/matt-bailey/generator-bones",
+	"bugs": "https://github.com/matt-bailey/generator-bones/issues",
+	"author": {
+		"name": "Matt Bailey",
+		"email": "me@mattbailey.co",
+		"url": "https://github.com/matt-bailey"
+	},
+	"main": "app/index.js",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/matt-bailey/generator-bones.git"
+	},
+	"dependencies": {
+		"yeoman-generator": "~0.13.4"
+	},
+	"engines": {
+		"node": ">=0.8.0"
+	},
+	"licenses": [{
+		"type": "MIT"
+	}]
 }
