--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-	"name": "generator-bones",
-	"version": "0.0.4",
+	"name": "generator-bones-bleached",
+	"version": "0.0.1",
 	"description": "Yeoman generator for scaffolding out a basic web project.",
 	"keywords": [
 		"yeoman-generator",
-		"bones",
+		"bones-bleached",
 		"skin",
 		"theme",
 		"front-end"
 	],
-	"homepage": "https://github.com/matt-bailey/generator-bones",
-	"bugs": "https://github.com/matt-bailey/generator-bones/issues",
+	"homepage": "https://github.com/paolocavanna/generator-bones-bleached",
+	"bugs": "https://github.com/paolocavanna/generator-bones-bleached/issues",
 	"author": {
-		"name": "Matt Bailey",
-		"email": "me@mattbailey.co",
-		"url": "https://github.com/matt-bailey"
+		"name": "Paolo Cavanna",
+		"email": "paolo_cavanna@hotmail.com",
+		"url": "https://github.com/paolocavanna"
 	},
 	"main": "app/index.js",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/matt-bailey/generator-bones.git"
-	},
 	"dependencies": {
-		"yeoman-generator": "~0.13.4"
+		"yeoman-generator": "~0.19.2"
 	},
 	"engines": {
 		"node": ">=0.8.0"
